@@ -37,17 +37,19 @@ def status():
     return debrid_resolvers != []
 
 
-def resolver(url, debrid, from_pack=None):
+def resolver(url, debrid, from_pack=None, return_list=False):
     try:
         debrid_resolver = [resolver for resolver in debrid_resolvers if resolver.name == debrid][0]
         debrid_resolver.login()
+
         if from_pack:
-            season, episode = from_pack.split('_')
             _host, _media_id = debrid_resolver.get_host_and_id(url)
             url_list = debrid_resolver.get_media_url(_host, _media_id, return_all=True)
-            #from resources.lib.modules import log_utils
-            #log_utils.log('url_list: ' + repr(url_list))
+            if return_list:
+                return url_list
+            season, episode = from_pack.split('_')
             url = [s['link'] for s in url_list if matchEpisode(s['name'], season, episode)][0]
+
         _host, _media_id = debrid_resolver.get_host_and_id(url)
         stream_url = debrid_resolver.get_media_url(_host, _media_id)
         return stream_url
